
2013-02-10
- po/cs.po: Updated. Contributed by Pavel Salač. (VRI)

2013-02-11
- bios/ikbd.c: Fixed Hatari hang on cold boot. (VRI)
- bios/blkdev.c: Changed blkdev_rwabs() to call XHReadWrite() directly
  rather than via DMAread()/DMAwrite(). (RFB)

2013-02-12
- bios/acsi.c bios/blkdev.c bios/disk.c bios/floppy.c: Cache flush &
  invalidation now take place at Bios/Xbios level. (RFB)
- bios/ikbd.c: Use delay_loop() to implement IKBD timeout. (VRI)
- bios/processor.S: For TOS compatibility, both caches are now
  invalidated after a read on a 68030. (RFB)

2013-02-13
- readme.txt doc/announce.txt doc/install.txt: Updated. (VRI)

2013-02-14
- bios/acsi.c bios/blkdev.c bios/disk.c bios/floppy.c: Revert changes to
  cache flush & invalidation. (RFB)

2013-02-15
- include/config.h: Enabled again Mega ST clock support in 192 kB ROMs. (VRI)
- include/config.h: Enabled again the easter egg in 192 kB ROMs. (VRI)
- include/config.h: Enabled USE_STOP_INSN_TO_FREE_HOST_CPU in 192 kB ROMs. (VRI)

2013-02-16
- doc/*: Updated. (VRI)
- *: Removed trailing spaces. (VRI)
- Makefile bios/initinfo.c doc/readme-amiga.txt: AROS support can be enabled
  with "make amiga AROS=1". Warning message added. (VRI)
- doc/status.txt: A few minor changes. (RFB)

2013-02-17
- bios/blkdev.c: Fix obscure latent bug in blkdev_rwabs(). (RFB)
- desk/desktop.def desk/desktop.rsc: Change Easter Egg object size to fix
  regression in 0.8.7. (RFB)
- bios/blkdev.c bios/disk.c bios/processor.h bios/processor.S: Move
  TOS-compatibility i-cache invalidation to Rwabs() & DMAread(). (RFB)

2013-02-18
- *: Updated copyright year for files modified since last release. (VRI)
- bios/ide.c: Fixed return value of ide_read_sector(). (VRI)
- *: Removed empty lines at end of file. (VRI)
- *.S: Removed useless .end directive at end of file. (VRI)
- doc/bugs.txt doc/coding.txt: Minor updates. (RFB)

2013-02-19
- doc/bugs.txt: Updated. Contributed by Eero Tamminen. (VRI)