@@ -4429,3 +4429,4 @@ Start... early ages
 
 2013-02-19
 - doc/bugs.txt: Updated. Contributed by Eero Tamminen. (VRI)
+- *.c: Removed useless inline on static functions. (VRI)
